Updated Font In About

--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ footer {
     letter-spacing: 10px;
     font-size: 2em;
     margin-top: -343pt;
-    font-family: 'Supermercado One', cursive;
+    font-family: 'Mochiy Pop P One', sans-serif;
     color: aqua;
 
 }
