--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,6 @@ footer {
 
     .about-tech {
         margin-bottom: 0px;
-        max-width: 734px;
 
     }
 
@@ -250,6 +249,7 @@ footer {
 
     .about-tech {
         margin-bottom: 0px;
+        max-width: 526px
 
     }
 
