--- a/css/style.css
+++ b/css/style.css
@@ -328,6 +328,7 @@ footer {
         margin-bottom: -64px;
         letter-spacing: 0;
         font-size: 9px;
+        width: 10px;
         margin-top: 462px;
         margin-right: -411px;
         margin-left: -60em;
