--- a/css/style.css
+++ b/css/style.css
@@ -72,9 +72,18 @@ body {
 }
 
 .latest-videos {
-    align-items: center;
-    display: grid;
-    margin-top: 58px;
+      position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; 
+  height: 0;
+}
+
+.latest-videos iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .sub-text {
