--- a/css/style.css
+++ b/css/style.css
@@ -72,19 +72,23 @@ body {
 }
 
 .latest-videos {
-      position: relative;
-  width: 100%;
-  padding-bottom: 56.25%; 
-  height: 0;
+      align-items: center;
+
+    display: grid;
+
+    margin-top: 58px;
+  
+  
+
 }
 
-.latest-videos iframe{
-  position: absolute;
-  top:0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
+
+  
+
+ 
+  
+
+
 
 .sub-text {
     margin-top: 2px;
