--- a/css/style.css
+++ b/css/style.css
@@ -307,7 +307,11 @@ footer {
         margin-left: 37px;
 
     }
-*/ Copyright Css Code By Tech Tips By Abhijith*/
+    
+    .latest-videos {
+        width: 311px;
+    }
+
    .latest-videos {
         align-items: center;
         display: grid;
