--- a/css/blog.css
+++ b/css/blog.css
@@ -5,7 +5,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@700&display=swap');
 
-
+*{
+    user-select:none;
+}
 body {
 
     padding: 0px;
